added another features

--- a/style.css
+++ b/style.css
@@ -13,13 +13,23 @@ body {
   color: black;
 }
 
+.psuduEl::before {
+  content: "";
+  position: absolute;
+  background-color: #b49c75;
+  width: 12px;
+  height: 60px;
+  top: 0px;
+  right: -30px;
+}
+
 .our-values::before {
   content: "";
   position: absolute;
   background-color: #b49c75;
   width: 9px;
   height: 32px;
-  top: 7px;
+  top: 21px;
   right: -17px;
 }
 .service-card:hover {
